# ai-agents

./: .gitignore  README.md  kernel.ipynb
01-llm-api/: Makefile  README.md  pyproject.toml
01-llm-api/src/: bot.py
02-aidd/: .env.example  .gitignore  Dockerfile  Makefile  idea.md  pyproject.toml  vision.md
02-aidd/.cursor/rules/: conventions.mdc  workflow.mdc
02-aidd/docs/: idea.md  tasklist.md
02-aidd/src/nika/: config.py  main.py
02-aidd/src/nika/handlers/: message_handler.py
02-aidd/src/nika/services/: chat_history.py  llm_client.py
03-multimodal/: .dockerignore  .env.example  .gitignore  idea.md  pyproject.toml
03-multimodal/docs/: idea.md  tasklist.md  vision.md
03-multimodal/src/nika/: config.py  main.py
04-rag-langchain/: .env.example  Makefile  pyproject.toml  report.md
04-rag-langchain/.cursor/rules/: conventions.mdc
04-rag-langchain/docs/: idea.md  tasklist.md  vision.md
04-rag-langchain/scripts/: chunk_experiment.py  embedding_experiment.py
04-rag-langchain/src/nika/: config.py  main.py
04-rag-langchain/src/nika/handlers/: message_handler.py
04-rag-langchain/src/nika/services/: chat_history.py  indexer.py  llm_client.py  meal_log.py  rag_service.py
05-monitoring-qa/: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  report.md
05-monitoring-qa/.cursor/rules/: conventions.mdc
05-monitoring-qa/data/: diabetes_hypoglycemia.json  diabetes_injection_sites.json  diabetes_insulin_storage.json
05-monitoring-qa/docs/: idea.md  tasklist.md  vision.md
05-monitoring-qa/scripts/: chunk_experiment.py  embedding_experiment.py
05-monitoring-qa/src/nika/: config.py
05-monitoring-qa/src/nika/handlers/: message_handler.py
05-monitoring-qa/src/nika/services/: evaluation.py  rag_service.py
06-advanced-rag/: .env.example  idea.md  pyproject.toml
06-advanced-rag/.cursor/rules/: conventions.mdc
06-advanced-rag/data/: meals.json
06-advanced-rag/docs/: embedding_comparison_report.md  idea.md  tasklist.md  vision.md
06-advanced-rag/scripts/: embedding_experiment.py  verify_hybrid_rag.py
06-advanced-rag/src/nika/: config.py  main.py
07-agents-langgraph/: README.md  pyproject.toml
07-agents-langgraph/.cursor/rules/: conventions.mdc
07-agents-langgraph/data/: meals.json
07-agents-langgraph/docs/: idea.md  tasklist.md  vision.md
07-agents-langgraph/scripts/: verify_hybrid_rag.py
07-agents-langgraph/src/nika/: config.py  main.py
08-mcp/: .env.example  README.md  idea.md  pyproject.toml
08-mcp/.agents/skills/langchain-fundamentals/: SKILL.md
08-mcp/.cursor/rules/: conventions.mdc
08-mcp/data/: diabetes_glucose_monitoring.json
08-mcp/datasets/: 05-rag-qa-dataset.json
08-mcp/docs/: idea.md  tasklist.md  vision.md
08-mcp/mcp/mcp-nika-agent/: README.md
08-mcp/mcp/mcp-nika-agent/src/mcp_nika_agent/: meal_bolus.py  server.py
08-mcp/scripts/: chunk_experiment.py  embedding_experiment.py
08-mcp/src/nika/: config.py
08-mcp/src/nika/handlers/: message_handler.py
08-mcp/src/nika/services/: agent_service.py  chitchat.py  glucose_unit_converter_tool.py  llm_client.py  mcp_tools_loader.py  rag_service.py
09-security/: Makefile  README.md  pyproject.toml  report.md  skills-lock.json
09-security/.cursor/rules/: conventions.mdc
09-security/data/: meals.json
09-security/docs/: idea.md  prompting.md  rag_evaluation_results.md  tasklist.md  vision.md
09-security/mcp/mcp-nika-agent/: pyproject.toml
09-security/mcp/mcp-nika-agent/src/mcp_nika_agent/: __init__.py  product_catalog.py  server.py
09-security/src/nika/: config.py
10-agents-eval/: .env.example  Makefile  README.md  pyproject.toml  report.md
10-agents-eval/.cursor/rules/: conventions.mdc
10-agents-eval/data/: diabetes_insulin_injections.json
10-agents-eval/docs/: idea.md  tasklist.md  vision.md
10-agents-eval/src/nika/: config.py  (+1 more)
10-agents-eval/tests/: conftest.py  helpers.py  test_agent_deterministic.py  test_agent_llm_judge.py
(+33 files in other folders)
