[project]
name = "nika"
version = "0.1.0"
description = "Ника — Telegram LLM-ассистент"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.1",
    "datasets>=3.0.0",
    "langchain>=1.3.13",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.1.0",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-text-splitters>=1.1.2",
    "langgraph>=0.4.0",
    "langsmith>=0.10.2",
    "openai>=2.45.0",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
    "ragas>=0.2.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
]

[dependency-groups]
dev = [
    "mypy>=2.2.0",
    "ruff>=0.15.21",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "src"
packages = ["nika"]

[[tool.mypy.overrides]]
module = [
    "langchain.*",
    "langchain_community.*",
    "langchain_core.*",
    "langchain_openai.*",
    "langchain_ollama.*",
    "langchain_text_splitters.*",
    "langchain_mcp_adapters.*",
    "langgraph.*",
    "ragas.*",
    "datasets.*",
    "sentence_transformers.*",
    "rank_bm25.*",
]
ignore_missing_imports = true
